# LucidProyect

./: README.md
battery/: BatteryWidget.qml  CMakeLists.txt  Main.qml  Speedo.qml  battery.cpp  battery.h  main.cpp
